--- a/.env
+++ b/.env
@@ -7,12 +7,12 @@ APP_URL=http://127.0.0.1
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlsrv
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=password
+DB_PORT=1433
+DB_DATABASE=newgarden
+DB_USERNAME=benjamin
+DB_PASSWORD=admin123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
